# esp32_encoder

./: .gitignore  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
esp32_encoder/: conveyor_node.py
pc/: conveyor_encoder_node.py  receiver.py
src/: main.cpp
