<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esp32_encoder</name>
  <version>0.1.0</version>
  <description>ESP32 conveyor belt encoder bridge. Reads CSV over serial and publishes conveyor speed/distance.</description>
  <maintainer email="fortriver54321@gmail.com">minu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
